--- a/Asset Insight System/a.i.s/backend/package.json
+++ b/Asset Insight System/a.i.s/backend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.8",
-    "nodemailer": "^6.9.13"
-  }
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.1"
+  },
+  "type": "module"
 }
